[package]
name = "rust_enigma"
version = "0.2.0"
authors = ["Mateusz Fesz <mateuszfesz@wp.pl>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "binary_enigma"
path = "src/bin.rs"



